--- a/Style.css
+++ b/Style.css
@@ -1,42 +1,40 @@
 body {
   font-family: "VT323", monospace;
   background-color: #000;
+  background-image: url("Eminem-head-rotating-8-bit-pixelation.gif");
+  background-repeat: repeat;
+  background-size: cover;
   padding: 20px;
+  padding: 0;
+  margin: 0;
   color: #fff;
+  overflow: hidden;
 }
 
-.container {
-  position: relative;
+.topbar {
+  background-color: #333;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 h1#title {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: 20px;
+  font-size: 18px;
   color: #fff;
   text-transform: uppercase;
-}
-
-.image-container {
-  float: right;
-  margin-left: 20px;
-}
-
-#image {
-  max-width: 500px;
-  height: auto;
-  border: 1px solid #fff;
+  margin: 0;
 }
 
 .form-container {
-  float: left;
+  display: flex;
+  align-items: center;
 }
 
 .form-group {
   display: flex;
   align-items: center;
-  margin-bottom: 10px;
+  margin-right: 10px;
 }
 
 button {
@@ -46,6 +44,7 @@ button {
   background-color: #00ff00;
   color: #000;
   border: none;
+  border-radius: 20px;
   cursor: pointer;
 }
 
@@ -53,19 +52,26 @@ button:hover {
   background-color: #00cc00;
 }
 
-#email-box {
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.3s ease;
-}
-
-#email-box input[type="email"] {
-  padding: 10px;
+#email-input {
+  padding: 5px;
   font-size: 14px;
   width: 250px;
-  margin-top: 10px;
+  margin-right: 10px;
 }
 
-.show-email-box #email-box {
-  max-height: 40px;
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.image-container {
+  text-align: center;
+}
+
+#image {
+  max-width: 500px;
+  height: auto;
+  border: 1px solid #fff;
 }
